--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,26 +7,31 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <ul class="navbar-link">
-    <li><%= link_to "Blocipedia", blocipedia_path %></li>
-    <li><%= link_to "Wiki's", wikis_path %></li>
-    <li><%= link_to "About", about_path %></li>
-  </ul>
-  <p class="navbar-text pull-right">
-  <% if user_signed_in? %>
-    Logged in as <strong><%= current_user.email %></strong>.
-    <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-    <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-  <% else %>
-    <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-    <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-  <% end %>
-  <% if notice %>
-    <p class="alert alert-success"><%= notice %></p>
-  <% end %>
-  <% if alert %>
-    <p class="alert alert-danger"><%= alert %></p>
-  <% end %>
+  <div class="container">
+    <ul class="nav nav-tabs">
+      <li><%= link_to "Blocipedia", blocipedia_path %></li>
+      <li><%= link_to "Wiki's", wikis_path %></li>
+      <li><%= link_to "About", about_path %></li>
+      <div class="pull-right user-info">
+        <% if user_signed_in? %>
+        <div class="pull-right">
+          Logged in as <strong><%= current_user.email %></strong>.
+          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+        </div>
+        <% else %>
+          <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+          <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+        <% end %>
+      </div>
+    </ul>
+    <% if notice %>
+      <p class="alert alert-success"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
+  </div>
   <%= yield %>
 </body>
 </html>
