--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,9 +1,24 @@
-<h1>Wikis</h1>
-  <div class="row">
-    <div class="col-md-8">
+<div class="container main-content">
+  <div class="center-block text-center">
+    <h1 class="text-center">Wikis</h1>
+    <div class="text-center signup-content">
+      <div class="table table-responsive">
+        <% @wikis.each do |wiki| %>
+          <div class="media">
+            <div class="media-body">
+              <small>
+                <%= link_to truncate(wiki.title, :length => 25), wiki %>
+
+                <%= link_to "Edit", edit_wiki_path(wiki), class: 'btn btn-success' %>
+                <%= link_to "Delete Wiki", [wiki], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
+              </small>
+            </div>
+          </div>
+        <% end %>
+      </div>
 
     </div>
-      <%= link_to "New Wiki", new_wiki_path, :class => 'btn btn-success'%>
-    </div>
+    <br>
+    <%= link_to "New Wiki", new_wiki_path, :class => 'btn btn-success'%>
   </div>
 </div>
