--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,10 +1,12 @@
-<h1>New Wiki</h1>
+<div class="container"
+<h1 class="pull-left">New Wiki</h1>
 
 <div class="row">
-  <div class="col-md-4">
+  <div class="center">
 
   </div>
-  <div class="col-md-8">
+  <div class="center">
     <%= render partial: 'form', locals: { wiki: @wiki } %>
   </div>
+</div>
 </div>
