--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,14 +1,17 @@
+<div class="text-center"
   <h1>
     <%= @wiki.title %> <br>
     <small>
       submitted <%= time_ago_in_words(@wiki.created_at) %> ago.
     </small>
   </h1>
-  <div class="row">
-    <div class="col-md-8">
+</div>
+  <div class="row text-center">
+    <div class="text-center body-fonts">
       <p><%= @wiki.body %></p>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 text-center">
       <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
       <%= link_to "Delete Wiki", [@wiki], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
     </div>
+  </div>
