--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -6,17 +6,18 @@
         <% @wikis.each do |wiki| %>
           <div class="media">
             <div class="media-body">
+              <% if current_user.role != 'standard' || wiki.private == false %>
               <small>
                 <%= link_to truncate(wiki.title, :length => 25), wiki %>
 
                 <%= link_to "Edit", edit_wiki_path(wiki), class: 'btn btn-success' %>
                 <%= link_to "Delete Wiki", [wiki], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
               </small>
+              <% end %>
             </div>
           </div>
         <% end %>
       </div>
-
     </div>
     <br>
     <%= link_to "New Wiki", new_wiki_path, :class => 'btn btn-success'%>
