--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -8,7 +8,7 @@
 </div>
   <div class="row text-center">
     <div class="text-center body-fonts">
-      <p><%= @wiki.body %></p>
+      <p><%= markdown(@wiki.body) %></p>
     </div>
     <div class="col-md-4 text-center">
       <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
