Made css changes to wiki index

--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,17 +1,16 @@
 <div class="container main-content">
   <div class="center-block text-center">
     <h1 class="text-center">Wikis</h1>
-    <div class="text-center signup-content">
+    <div class="text-center scroll signup-content">
       <div class="table table-responsive">
         <% @wikis.each do |wiki| %>
           <div class="media">
             <div class="media-body">
               <% if current_user.role != 'standard' || wiki.private == false %>
               <small>
-                <%= link_to truncate(wiki.title, :length => 25), wiki %>
-
-                <%= link_to "Edit", edit_wiki_path(wiki), class: 'btn btn-success' %>
-                <%= link_to "Delete Wiki", [wiki], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
+                <%= link_to truncate(wiki.title, :length => 25), wiki, class: 'pull-left buffer' %>
+                <%= link_to "Delete Wiki", [wiki], method: :delete, class: 'btn btn-danger upgrade pull-right', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
+                <%= link_to "Edit", edit_wiki_path(wiki), class: 'btn btn-success upgrade pull-right' %>
               </small>
               <% end %>
             </div>
