--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -112,3 +112,16 @@ text-align: center;
   padding-right: 100px;
   font-size: 25px;
 }
+
+.upgrade {
+  margin-right: 14px;
+}
+
+.buffer {
+  margin-left: 14px;
+}
+
+.scroll {
+  max-height: 600px;
+  overflow: auto;
+}
