--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@ font-family: "Times New Roman", Times, serif;
   border-style: solid;
   display: block;
   margin: 0 auto;
-  width: 600px;
+  width: auto;
   border-radius: 15px;
   padding-bottom: 20px;
   padding-top: 20px;
