--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -13,5 +13,8 @@
     <div class="col-md-4 text-center">
       <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
       <%= link_to "Delete Wiki", [@wiki], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
+      <% if current_user.premium? %>
+         <%= link_to "Manage Collaborators", wiki_collaborators_path(@wiki), class: 'btn btn-info' %>
+      <% end %>
     </div>
   </div>
